[tool.poetry]
name = "opnsense-exporter"
version = "0.1.0"
description = ""
authors = ["Tom Paulus <tom@tompaulus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.18.0"
environs = "^9.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
